--- a/NetworkInventory.Maui/AppShell.xaml
+++ b/NetworkInventory.Maui/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:NetworkInventory.Maui"
+    xmlns:views="clr-namespace:NetworkInventory.Maui.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="NetworkInventory.Maui">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate views:DevicesPage}"
         Route="MainPage" />
 
 </Shell>
