--- a/NetworkInventory.Maui/Views/EditDevicePage.xaml
+++ b/NetworkInventory.Maui/Views/EditDevicePage.xaml
@@ -33,6 +33,29 @@
 
         <Frame Padding="10,2">
             <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="Serial number"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="240"
+                    ClearButtonVisibility="WhileEditing"
+                    Keyboard="Text"
+                    TextTransform="Uppercase"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntrySerialNumber">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="SerialNumberValidator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="3"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
                 <Label VerticalOptions="Center" WidthRequest="90" Text="IPv4 address"/>
                 <Entry
                     VerticalOptions="Center"
@@ -197,6 +220,298 @@
 
         <Frame Padding="10,2">
             <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="Gateway"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryGatewayOctet0">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="GatewayOctet0Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryGatewayOctet1">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="GatewayOctet1Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryGatewayOctet2">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="GatewayOctet2Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryGatewayOctet3">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="GatewayOctet3Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="Preferred DNS"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryPreferredDNSOctet0">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="PreferredDNSOctet0Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryPreferredDNSOctet1">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="PreferredDNSOctet1Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryPreferredDNSOctet2">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="PreferredDNSOctet2Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryPreferredDNSOctet3">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="PreferredDNSOctet3Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="Alternate DNS"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryAlternateDNSOctet0">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="AlternateDNSOctet0Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryAlternateDNSOctet1">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="AlternateDNSOctet1Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryAlternateDNSOctet2">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="AlternateDNSOctet2Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="60"
+                    ClearButtonVisibility="WhileEditing"
+                    MaxLength="3"
+                    Keyboard="Numeric"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryAlternateDNSOctet3">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="AlternateDNSOctet3Validator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="1"
+                            MaximumLength="3"
+                            RegexPattern="^((25[0-5])|(2[0-4][0-9])|([0-1]?[0-9]?[0-9]))$"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="VLAN"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="240"
+                    ClearButtonVisibility="WhileEditing"
+                    Keyboard="Text"
+                    TextTransform="Uppercase"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryVlan">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="VlanValidator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="5"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label VerticalOptions="Center" WidthRequest="90" Text="Upstream Device"/>
+                <Entry
+                    VerticalOptions="Center"
+                    WidthRequest="240"
+                    ClearButtonVisibility="WhileEditing"
+                    Keyboard="Text"
+                    TextTransform="Uppercase"
+                    ReturnType="Next"
+                    IsSpellCheckEnabled="false"
+                    IsTextPredictionEnabled="false"
+                    x:Name="EntryUpstreamDevice">
+                    <Entry.Behaviors>
+                        <toolkit:TextValidationBehavior
+                            x:Name="UpstreamDeviceValidator"
+                            Flags="ValidateOnAttaching,ValidateOnValueChanged"
+                            MinimumLength="5"/>
+                    </Entry.Behaviors>
+                </Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
                 <Label VerticalOptions="Center" WidthRequest="90" Text="Location"/>
                 <Entry
                     VerticalOptions="Center"
@@ -211,7 +526,7 @@
                         <toolkit:TextValidationBehavior
                             x:Name="LocationValidator"
                             Flags="ValidateOnAttaching,ValidateOnValueChanged"
-                            MinimumLength="3"/>
+                            MinimumLength="2"/>
                     </Entry.Behaviors>
                 </Entry>
             </HorizontalStackLayout>
