--- a/NetworkInventory.Maui/Views/AddDevicePage.xaml
+++ b/NetworkInventory.Maui/Views/AddDevicePage.xaml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:NetworkInventory.Maui.Views.Controls"
              x:Class="NetworkInventory.Maui.Views.AddDevicePage"
              Title="Add Device">
-    
-    <VerticalStackLayout>
 
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-
-        <Button
-            x:Name="CancelBtn"
-            Text="Cancel"
-            Clicked="CancelBtn_Clicked"/>
-
-    </VerticalStackLayout>
+    <controls:DeviceControl
+        x:Name="DeviceControl"
+        OnSave="DeviceControl_OnSave"
+        OnCancel="DeviceControl_OnCancel"
+        OnError="DeviceControl_OnError"/>
 </ContentPage>
