--- a/NetworkInventory.Maui/Views/DevicesPage.xaml
+++ b/NetworkInventory.Maui/Views/DevicesPage.xaml
@@ -22,7 +22,15 @@
                 <DataTemplate>
                     <TextCell
                         Text="{Binding Name}"
-                        Detail="{Binding CIDR}"/>
+                        Detail="{Binding CIDR}">
+                        <TextCell.ContextActions>
+                            <MenuItem
+                                Text="Delete"
+                                IsDestructive="True"
+                                Clicked="DeleteMenuItem_Clicked"
+                                CommandParameter="{Binding .}"/>
+                        </TextCell.ContextActions>
+                    </TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
