--- a/NetworkInventory.Maui/Views/DevicesPage.xaml
+++ b/NetworkInventory.Maui/Views/DevicesPage.xaml
@@ -25,10 +25,11 @@
             RowHeight="50"
             Background="Transparent"
             SeparatorColor="Silver"
+            ItemsSource="{Binding Devices}"
             ItemSelected="DevicesList_ItemSelected"
             ItemTapped="DevicesList_ItemTapped">
             <ListView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="m:Device">
                     <TextCell
                         Text="{Binding Name}"
                         Detail="{Binding CIDR}">
@@ -43,7 +44,33 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>-->
-        <CollectionView
+
+        <ListView
+            Grid.Column="0"
+            Grid.Row="1"
+            RowHeight="50"
+            x:Name="DevicesList"
+            Background="Transparent"
+            SeparatorColor="Silver"
+            ItemsSource="{Binding Devices}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="m:Device">
+                    <TextCell
+                        Text="{Binding Name}"
+                        Detail="{Binding CIDR}">
+                        <TextCell.ContextActions>
+                            <MenuItem
+                                Text="Delete"
+                                IsDestructive="True"
+                                Command="{Binding Source={x:Reference DevicesList}, Path=BindingContext.DeleteDeviceCommand}"
+                                CommandParameter="{Binding Id}"/>
+                        </TextCell.ContextActions>
+                    </TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <!--<CollectionView
             Grid.Column="0"
             Grid.Row="1"
             ItemsSource="{Binding Devices}">
@@ -61,7 +88,7 @@
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
-        </CollectionView>
+        </CollectionView>-->
 
         <Button
             Grid.Column="0"
