--- a/NetworkInventory.Maui/Views/AddDevicePage.xaml
+++ b/NetworkInventory.Maui/Views/AddDevicePage.xaml
@@ -6,8 +6,11 @@
              Title="Add Device">
 
     <controls:DeviceControl
+        x:Name="DeviceControl"/>
+
+    <!--<controls:DeviceControl
         x:Name="DeviceControl"
         OnSave="DeviceControl_OnSave"
         OnCancel="DeviceControl_OnCancel"
-        OnError="DeviceControl_OnError"/>
+        OnError="DeviceControl_OnError"/>-->
 </ContentPage>
