--- a/NetworkInventory.Maui/Views/DevicesPage.xaml
+++ b/NetworkInventory.Maui/Views/DevicesPage.xaml
@@ -92,7 +92,7 @@
                             Orientation="Vertical"
                             Margin="0,5">
                             <Label Text="{Binding Name}"/>
-                            <Label Text="{Binding CIDR}" TextColor="Gray"/>
+                            <Label Text="{Binding IPv4Address}" TextColor="Gray"/>
                             <StackLayout.GestureRecognizers>
                                 <TapGestureRecognizer
                                     Command="{Binding Source={x:Reference DevicesList}, Path=BindingContext.GoToEditDeviceCommand}"
