--- a/NetworkInventory.Maui/Views/DevicesPage.xaml
+++ b/NetworkInventory.Maui/Views/DevicesPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:NetworkInventory.Maui.ViewModels"
              xmlns:m="clr-namespace:NetworkInventory.CoreBusiness;assembly=NetworkInventory.CoreBusiness"
+             xmlns:vm="clr-namespace:NetworkInventory.Maui.ViewModels"
              x:DataType="vm:DevicesViewModel"
              x:Class="NetworkInventory.Maui.Views.DevicesPage"
              Title="Devices">
@@ -15,8 +15,8 @@
         <SearchBar
             Grid.Column="0"
             Grid.Row="0"
-            x:Name="FilterBar"
-            Placeholder="Filter Devices by Name, Sn, Location or User"/>
+            x:Name="SearchBar"
+            Placeholder="Search Devices by Name, Sn, Location or User"/>
 
         <!--<ListView
             Grid.Column="0"
@@ -81,13 +81,6 @@
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Device">
                     <ViewCell>
-                        <ViewCell.ContextActions>
-                            <MenuItem
-                                Text="Delete"
-                                IsDestructive="True"
-                                Command="{Binding Source={x:Reference DevicesList}, Path=BindingContext.DeleteDeviceCommand}"
-                                CommandParameter="{Binding Id}"/>
-                        </ViewCell.ContextActions>
                         <StackLayout
                             Orientation="Vertical"
                             Margin="0,5">
@@ -99,6 +92,13 @@
                                     CommandParameter="{Binding Id}"/>
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
+                        <ViewCell.ContextActions>
+                            <MenuItem
+                                Text="Delete"
+                                IsDestructive="True"
+                                Command="{Binding Source={x:Reference DevicesList}, Path=BindingContext.DeleteDeviceCommand}"
+                                CommandParameter="{Binding Id}"/>
+                        </ViewCell.ContextActions>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
