--- a/NetworkInventory.Maui/Views/DevicesPage.xaml
+++ b/NetworkInventory.Maui/Views/DevicesPage.xaml
@@ -128,7 +128,7 @@
             Grid.Column="0"
             Grid.Row="2"
             Margin="5"
-            x:Name="AddDeviceBtn"
-            Text="Add Device"/>
+            Text="Add Device"
+            Command="{Binding GoToAddDeviceCommand}"/>
     </Grid>
 </ContentPage>
